--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
             <ons-page>
                 <ons-list style="background: black;">
                     <ons-list-header class="menu_header">View by Entertainment</ons-list-header>
-                    <ons-list-item tappable>SM</ons-list-item>
-                    <ons-list-item tappable>YG</ons-list-item>
-                    <ons-list-item tappable>JYP</ons-list-item>
-                    <ons-list-item tappable>BigHit</ons-list-item>
+                    <ons-list-item tappable><img class="logoenter" src="assets/img/1.png">Entertainment</ons-list-item>
+                    <ons-list-item tappable><img class="logoenter" src="assets/img/2.png">Entertainment</ons-list-item>
+                    <ons-list-item tappable><img class="logojyp" src="assets/img/3.png">Entertainment</ons-list-item>
+                    <ons-list-item tappable><img class="logoenter" src="assets/img/4.png">Entertainment</ons-list-item>
                     <ons-list-item tappable>Other</ons-list-item>
-                   
-
                 </ons-list>
             </ons-page>
         </ons-splitter-side>
