--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <ons-list-item tappable><img class="logoenter" src="assets/img/2.png">Entertainment</ons-list-item>
                     <ons-list-item tappable><img class="logojyp" src="assets/img/3.png">Entertainment</ons-list-item>
                     <ons-list-item tappable><img class="logoenter" src="assets/img/4.png">Entertainment</ons-list-item>
+                    <ons-list-item tappable><img class="logoenter" src="assets/img/5.png">Entertainment</ons-list-item>
+                    <ons-list-item tappable><img class="logoenter" src="assets/img/6.png">Entertainment</ons-list-item>
+                    <ons-list-item tappable><img class="logoenter" src="assets/img/7.png">Entertainment</ons-list-item>
+
                     <ons-list-item tappable>Other</ons-list-item>
                 </ons-list>
             </ons-page>
