--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
             <ons-page id="home">
 
                 <ons-tabbar swipeable position="auto">
-                    <ons-tab page="views/home.html" class="bg-title" bage="7">
+                    <ons-tab page="views/home.html" class="bg-title">
                         <ons-icon  icon="md-home,material:md-home" size="25px"></ons-icon>
                     </ons-tab>
-                    <ons-tab page="views/search.html" class="bg-title"  bage="7">
+                    <ons-tab page="views/search.html" class="bg-title">
                         <ons-icon icon="md-search,material:md-search" size="25px"></ons-icon>
                     </ons-tab>
-                    <ons-tab page="views/cart.html" class="bg-title"  bage="7">
+                    <ons-tab page="views/cart.html" class="bg-title">
                         <ons-icon icon="md-shopping-cart"  size="25px"></ons-icon>
                     </ons-tab>
-                    <ons-tab page="views/profile.html" class="bg-title" bage="7">
+                    <ons-tab page="views/profile.html" class="bg-title">
                         <ons-icon  icon="md-account-circle"  size="25px"></ons-icon>
                     </ons-tab>
 
