--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <link rel="stylesheet" href="lib/onsenui/onsenui.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="assets/img/Logo.png">
-    <script src="lib/onsenui/onsenui.min.js"></script>
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/app.js"></script>
 
-
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
 
 
     <title>MiKR</title>
@@ -64,16 +55,16 @@
 
                 <ons-tabbar swipeable position="auto">
                     <ons-tab page="views/home.html" class="bg-title">
-                        <ons-icon  icon="md-home,material:md-home" size="25px"></ons-icon>
+                        <ons-icon icon="md-home,material:md-home" size="25px"></ons-icon>
                     </ons-tab>
                     <ons-tab page="views/search.html" class="bg-title">
                         <ons-icon icon="md-search,material:md-search" size="25px"></ons-icon>
                     </ons-tab>
                     <ons-tab page="views/cart.html" class="bg-title">
-                        <ons-icon icon="md-shopping-cart"  size="25px"></ons-icon>
+                        <ons-icon icon="md-shopping-cart" size="25px"></ons-icon>
                     </ons-tab>
                     <ons-tab page="views/profile.html" class="bg-title">
-                        <ons-icon  icon="md-account-circle"  size="25px"></ons-icon>
+                        <ons-icon icon="md-account-circle" size="25px"></ons-icon>
                     </ons-tab>
 
                 </ons-tabbar>
@@ -81,16 +72,17 @@
 
         </ons-page>
     </template>
-
-
-
-
-
-
 </body>
+<script src="lib/onsenui/onsenui.min.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/app.js"></script>
 
 
-
-
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
 
 </html>
