--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="assets/img/Logo.png">
 
-
+    <style>
+		@font-face {
+		   font-family: SFProDisplay;
+		   src: url('/css/font/SFProDisplay-Regular.ttf') format('truetype');
+		}
+	</style>
 
     <title>MiKR</title>
 </head>
