--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         <br>
 
         <div class="fhashlight">
-          <img class="logo6" src="assets/img/Logo.png"">
+          <img class="logo6" src="assets/img/Logo.png">
       </div>
         <div style="text-align: center; margin-top: 30px">
           <p>
