--- a/login.html
+++ b/login.html
@@ -76,6 +76,12 @@
         <h3 style="text-align: center">Sign up now</h3>
       </ons-page>
 
+
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+<script src="/js/app.js"></script>
 </body>
 
 </html>
