--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 <script src="js/app.js"></script>
 <script src="js/detail.js"></script>
 <script src="js/cart.js"></script>
+<script src="js/firebase.js"></script>
+<script src="js/signin.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 <!-- import accesseries -->
