--- a/signin.html
+++ b/signin.html
@@ -11,6 +11,11 @@
     <script src="lib/onsenui/onsenui.min.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/detail.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/firebase.js"></script>
+    <script src="js/signin.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
